--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -65,6 +65,8 @@ layout: default
               {% include resume/basics.html %}
             {% when "education" %}
               {% include resume/education.html %}
+            {% when "visiting" %}
+              {% include resume/visiting.html %}
             {% when "work" %}
               {% include resume/work.html %}
             {% when "volunteer" %}
