--- a/_includes/resume/visiting.html
+++ b/_includes/resume/visiting.html
@@ -1,7 +1,7 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
     {% assign visiting = data[1] | sort: 'startDate' | reverse %}
     
-    {% for content in education %}
+    {% for content in visiting %}
       <li class="list-group-item">
         <div class="row">
           <div class="col-xs-2 cl-sm-2 col-md-2 text-center" style="width: 75px;">
